--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,19 @@
     <string name="basics_layout">Basics Layout</string>
     <string name="add_button">Add Button</string>
     <string name="roll">Roll</string>
+    <string name="unit2">unit2</string>
+    <string name="cost_of_service">Cost of Service</string>
+    <string name="amazing_20">Amazing (20%)</string>
+    <string name="good_18">Good (18%)</string>
+    <string name="ok_15">OK (15%)</string>
+    <string name="round_up_tip">Round up tip?</string>
+    <string name="calculate">Calculate</string>
+    <string name="tip_amount">Tip Amount: %s</string>
+    <string name="user_experience">User experience</string>
+    <string name="how_was_the_service">How was the service?</string>
+    <string name="calculate_the_tip">Calculate the tip</string>
+    <string name="primary_color">Primary color</string>
+    <string name="button">Button</string>
+    <string name="secondary_color">Secondary color</string>
+    <string name="email_icon">email icon</string>
 </resources>
